--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^5.1.0",
     "mysql": "^2.18.1",
-    "mysql2": "^3.14.5",
-    "promise": "^8.3.0"
+    "mysql2": "^3.15.1",
+    "path": "^0.12.7",
+    "promise": "^8.3.0",
+    "url": "^0.11.4"
   }
 }
